[navigation-feature] feat: fix toolbar positioning and z-index in navbar styles

--- a/src/app/navigation/components/navbar/navbar.scss
+++ b/src/app/navigation/components/navbar/navbar.scss
@@ -15,6 +15,11 @@
   );
 }
 
+.mat-toolbar {
+  position: fixed;
+  z-index: 2;
+}
+
 .layout {
   width: 100%;
   max-width: 1200px;
